Added notes for the first part of the BEST #5 meetup

--- a/meetups/best-bdx/2018-10-16_best5.md
+++ b/meetups/best-bdx/2018-10-16_best5.md
@@ -3,8 +3,74 @@
 ## Developers and managers: creating trust in an Agile context
 By [Bastien Gallay](https://twitter.com/bastien_gallay), Agile coach @ Upwiser
 
+Developers like managers have ideas they cannot always explore at work. Test-Driven Development and Pair programming are two of these.  
+Recommended: ["The Expert" YouTube shorts](https://www.youtube.com/watch?v=BKorP55Aqvg&list=PLKlTnphWMK_ptOjZYlQO8oXFzyp23ZB9M)  
+
+Amongst developers, the turnover is very high \[Statistics origin is unknown\]:
+- 71% of them leave because their salary is not competitive enough;
+- 58% of them leave because they do feel recognized enough for their job;
+- 58% of developers would trust a complete stranger more than their superior!
+
+In addition, new types of jobs join the IT realm: mathematicians become data scientists, ergonomists become UX designers, etc.
+
+Only 36% of IT projects are delivered on time. Some companies add more supervision, others more resources. Though, this reduces decision capacity.
+
+The disagreement triangle:
+```
+   Scope
+  /\   
+ /  \-- Estimated project
+/    \  (Our baseline)
+------ 
+|      Cost
+Time
+```
+
+```
+           Scope
+          |
+          /\
+         /  \
+        / /\ \
+       / |  |---------- What has been sold (Scope +, Time -, Cost -) 
+      /  //\\  \
+     /  //  \\  \
+    /   +    +   \
+   /   /|    |\-------- Estimated project
+  /   / /    \ \   \ 
+ /   / -------- \   \-- What has been delivered (Scope ++, Time ++, Cost ++)
+/    ------------    \
+-----------------------
+|                     |
+Time                  Cost
+```
+
+Agile is an empirical methodology which manifesto has been officially written in 2001. The four values mentioned in the manifesto are:
+- Individuals and interactions over processes and tools
+- Working software over comprehensive documentation
+- Customer collaboration over contract negotiation
+- Responding to change over following a plan
+
+In all of this, Agile is meant to reduce the failure rate and increase the success rate of projects. This philosophy is not magical and not practical for projects of all shapes and sizes, though. Specifically, engagement and communication is what makes projects feel better.
+
+[The Delegation Poker](https://management30.com/practice/delegation-poker/)
+This exercise will simplify the process of decision making by distributing the tasks. The deciders have to agree on set rules what is their most appropriate level of delegation
+
+1. Tell: I will tell them = I will do it
+2. Sell: I will try and sell it to them = I will teach you
+3. Consult: I will consult and then decide = I will listen your input and decide
+4. Agree: We will agree together = Let's decide together!
+5. Advise: I will advise but they decide = I will help you in your decision
+6. Inquire: I will inquire after they decide = I will ask questions after your decision
+7. Delegate: I will fully delegate = You will do it
+
+[The Lean coffee](http://agilecoffee.com/leancoffee/)
+The Lean coffee is an exercice meant to speed up meetings, make them more productive and allow everyone to contribute. Like most meetings, a Lean coffee will start with a meeting objectives and key points review. After this, meeting attendants will vote for the points that matter the most. The most important topics are then tackled one by one with a thumbs up / thumbs down vote after the end of each five-minute session to decide if the topic is worth discussing further.
+
+The advantage of such a solution is to prioritize the sensitive points of the meeting, allow everyone to have a voice and allow for post-meeting discussions with the people who wanted to prolong the discussions to understand why they wanted more time.
+
 ## Knuckle: Automating frontend CI
-By [Guillaume Amat](https://twitter.com/guillaume_amat), Frontend architect @ ekino
+By [Guillaume Amat](https://twitter.com/guillaume_amat), Frontend architect @ ekino  
 [Knuckle](https://github.com/GuillaumeAmat/knuckle)
 
 ## Scaling Java applications: To infinity and beyond!
