Finished part 1 of 3 of the BEST #5 meetup

--- a/meetups/best-bdx/2018-10-16_best5.md
+++ b/meetups/best-bdx/2018-10-16_best5.md
@@ -3,6 +3,8 @@
 ## Developers and managers: creating trust in an Agile context
 By [Bastien Gallay](https://twitter.com/bastien_gallay), Agile coach @ Upwiser
 
+### Developers
+
 Developers like managers have ideas they cannot always explore at work. Test-Driven Development and Pair programming are two of these.  
 Recommended: ["The Expert" YouTube shorts](https://www.youtube.com/watch?v=BKorP55Aqvg&list=PLKlTnphWMK_ptOjZYlQO8oXFzyp23ZB9M)  
 
@@ -15,7 +17,8 @@ In addition, new types of jobs join the IT realm: mathematicians become data sci
 
 Only 36% of IT projects are delivered on time. Some companies add more supervision, others more resources. Though, this reduces decision capacity.
 
-The disagreement triangle:
+### The disagreement triangle
+
 ```
    Scope
   /\   
@@ -45,6 +48,8 @@ Time
 Time                  Cost
 ```
 
+### Agile
+
 Agile is an empirical methodology which manifesto has been officially written in 2001. The four values mentioned in the manifesto are:
 - Individuals and interactions over processes and tools
 - Working software over comprehensive documentation
@@ -52,6 +57,8 @@ Agile is an empirical methodology which manifesto has been officially written in
 - Responding to change over following a plan
 
 In all of this, Agile is meant to reduce the failure rate and increase the success rate of projects. This philosophy is not magical and not practical for projects of all shapes and sizes, though. Specifically, engagement and communication is what makes projects feel better.
+
+### The Delegation Poker
 
 [The Delegation Poker](https://management30.com/practice/delegation-poker/)
 This exercise will simplify the process of decision making by distributing the tasks. The deciders have to agree on set rules what is their most appropriate level of delegation
@@ -64,10 +71,49 @@ This exercise will simplify the process of decision making by distributing the t
 6. Inquire: I will inquire after they decide = I will ask questions after your decision
 7. Delegate: I will fully delegate = You will do it
 
+### The Lean coffee
+
 [The Lean coffee](http://agilecoffee.com/leancoffee/)
 The Lean coffee is an exercice meant to speed up meetings, make them more productive and allow everyone to contribute. Like most meetings, a Lean coffee will start with a meeting objectives and key points review. After this, meeting attendants will vote for the points that matter the most. The most important topics are then tackled one by one with a thumbs up / thumbs down vote after the end of each five-minute session to decide if the topic is worth discussing further.
 
 The advantage of such a solution is to prioritize the sensitive points of the meeting, allow everyone to have a voice and allow for post-meeting discussions with the people who wanted to prolong the discussions to understand why they wanted more time.
+
+Always try to include managers into the steps of your project. Your project exposes several layers of super-tasks: Todos &lt; Days &lt; Features &lt; Iterations &lt; Versions &lt; Products &lt; Portfolio &lt; Strategy. Each of these layers exposes its own objectives with people accountable with the success of those objectives. Intel and Google successively thought about the organization of of what is called Objectives and Key Results.
+
+### Additional tips and notes
+
+Do not hesitate to use checklists to track what has been done and what has been completed.
+
+In a professional context, Trust can be expressed as the following formula:
+```
+         Cr + Re + In
+Trust = --------------
+              SI
+
+Cr: Credibility. What your CV and your experience says of you.
+Re: Acquired responsibilities. Grows with your stay in your positions and in your career.
+In: Intimacy. Your good relationships with your coworkers.
+SI: Self-Interest or Orientation. Simply put, your interests.
+```
+
+Here is a standard team efficiency model for a project:
+```
+                      --------->
+                     /     |
+                 ----      Improvement
+Training        /
+|            ---
+|           /-------- Normalization
+|          /
+|         /
+----     /
+    \___/
+      |
+      Conflicts
+```
+
+How to start working with Agile:
+Start with a pilot project, experiment, make sure both parties (client and internal) have expertise and that the teams are both ready and in agreement.
 
 ## Knuckle: Automating frontend CI
 By [Guillaume Amat](https://twitter.com/guillaume_amat), Frontend architect @ ekino  
