Part 2 of 3 of the Best #5 meetup

--- a/meetups/best-bdx/2018-10-16_best5.md
+++ b/meetups/best-bdx/2018-10-16_best5.md
@@ -119,5 +119,33 @@ Start with a pilot project, experiment, make sure both parties (client and inter
 By [Guillaume Amat](https://twitter.com/guillaume_amat), Frontend architect @ ekino  
 [Knuckle](https://github.com/GuillaumeAmat/knuckle)
 
+It is common to follow the DRY - Do not Repeat Yourself - rule to avoid one of the most common causes of technical debt: code duplication. The problem: why does this principle does not apply to project configuration, duplicated from project to project. With such a tool, you could:
+- Auto-generate the configuration
+- Auto-install dependencies
+- Auto-update your dependencies
+
+Knuckle currently supports the following tools: Prettier, ESLint, TSLint, CommitLint, Husky, Lint-Staged.
+About CommitLint: this tool auto-generates your changelog by requiring developers to follow rules when they commit.
+Next up: Support for StyleLint, Jest, an actual eject, an add wizard and audit. Do not hesitate to contribute to support your favorite tool!
+
+### Installation
+
+The installation of Knuckle is strictly identical to ESLint, Prettier, etc:
+- yarn add --dev knuckle
+- yarn knuckle add ; select your tools
+- yarn knuckle up ; You are ready to go!
+
+Knuckle can also use existing dependencies to generate a list of dependencies to install and configurations to edit. It will automatically detect and use the dependency manager set for your project!
+
+### Overriding the default behavior
+- mkdir .knuckle
+- touch .knuckle/.prettierrc ; The name of the configuration file you want to override
+- Edit the configuration file with the desired behavior
+- yarn knuckle up --no-install ; Done!
+
+### Ejecting
+- yarn remove knuckle
+- rm -rf .knuckle
+
 ## Scaling Java applications: To infinity and beyond!
 By [Julien Roy](https://twitter.com/vanr0y), Java architect @ Bankin'
