Finished BEST #5 meetup note transcription!

--- a/meetups/best-bdx/2018-10-16_best5.md
+++ b/meetups/best-bdx/2018-10-16_best5.md
@@ -149,3 +149,26 @@ Knuckle can also use existing dependencies to generate a list of dependencies to
 
 ## Scaling Java applications: To infinity and beyond!
 By [Julien Roy](https://twitter.com/vanr0y), Java architect @ Bankin'
+
+The idea of this talk stemmed from a client who could not evaluate the load of their future application. By load we mean the number of simultaneous users or their session duration. One of the only objectives was to propose an API that could respond in less than 50ms and scale infinitely.
+
+To achieve this, some ground rules were laid: the application was to be stateless, require no I/O, use cache whenever possible and be built with autoscaling in mind. In parallel, load tests validated the scalability and the set objectives. They were set to 250 Virtual Users with 10 minutes of ramp-up time and 15 minutes of execution.
+
+### The process
+
+The process is iterative and must be run every time a bottleneck is removed, until the objectives are reached.
+
+1. Log analysis: Look at autoscaling, memory, CPU logs and exit codes.
+2. Reproduction: using equivalent tools, test your application and try to reproduct your issue. For load testing, JMeter is the standard, otherwise system analysis and tracing will do.
+3. Fix: Patch the issue. This step might lead you down the rabbit hole, though.
+
+[Pumba](https://github.com/alexei-led/pumba) has been recommended to chaos-test Docker infrastructures. This tools can be used to create artificial delay between multiple containers.
+
+### Key points
+
+- Your environments must be identical or as close as possible to each other;
+- Every issue must be reproducible;
+- Retrieve as much metrics as possible;
+- Only one change at a time!
+- Automate your testing processes;
+- Every issue must be *locally* reproducible.
