Removed unwanted list item

--- a/meetups/cncf-bdx/2018-10-23_cncf1.md
+++ b/meetups/cncf-bdx/2018-10-23_cncf1.md
@@ -1,8 +1,7 @@
 # Cloud Native Computing Foundation Bordeaux  #1
 
 ## The kickoff
-By [Étienne Coutaud](https://twitter.com/etiennecoutaud), DevOps consultant @ OCTO Technology
- - [Slides](https://speakerdeck.com/etiennecoutaud/presentation-de-la-cloud-native-computing-foundation)
+By [Étienne Coutaud](https://twitter.com/etiennecoutaud), DevOps consultant @ OCTO Technology \- [Slides](https://speakerdeck.com/etiennecoutaud/presentation-de-la-cloud-native-computing-foundation)
 
 The [CNCF](https://www.cncf.io/), short for Cloud Native Computing Foundation, is the place to go for people that are interested in cloud solutions, IT automation and more broadly the future of IT. As such, the main goals of the meetup are to share ideas and initiatives around the DevOps culture.
 
