Added code blocks for the Knuckle section

--- a/meetups/best-bdx/2018-10-16_best5.md
+++ b/meetups/best-bdx/2018-10-16_best5.md
@@ -131,21 +131,27 @@ Next up: Support for StyleLint, Jest, an actual eject, an add wizard and audit. 
 ### Installation
 
 The installation of Knuckle is strictly identical to ESLint, Prettier, etc:
-- yarn add --dev knuckle
-- yarn knuckle add ; select your tools
-- yarn knuckle up ; You are ready to go!
+```bash
+$ yarn add --dev knuckle
+$ yarn knuckle add ; select your tools
+$ yarn knuckle up ; You are ready to go!
+```
 
 Knuckle can also use existing dependencies to generate a list of dependencies to install and configurations to edit. It will automatically detect and use the dependency manager set for your project!
 
 ### Overriding the default behavior
-- mkdir .knuckle
-- touch .knuckle/.prettierrc ; The name of the configuration file you want to override
-- Edit the configuration file with the desired behavior
-- yarn knuckle up --no-install ; Done!
+```bash
+$ mkdir .knuckle
+$ touch .knuckle/.prettierrc ; The name of the configuration file you want to override
+$ Edit the configuration file with the desired behavior
+$ yarn knuckle up --no-install ; Done!
+```
 
 ### Ejecting
-- yarn remove knuckle
-- rm -rf .knuckle
+```
+$ yarn remove knuckle
+$ rm -rf .knuckle
+```
 
 ## Scaling Java applications: To infinity and beyond!
 By [Julien Roy](https://twitter.com/vanr0y), Java architect @ Bankin'
