Spelling mistakes pass

--- a/meetups/bdx-js/2018-10-03_Babel-7.md
+++ b/meetups/bdx-js/2018-10-03_Babel-7.md
@@ -4,13 +4,13 @@ By [Sven Sauleau](https://twitter.com/svensauleau), Compiler developer @ Igalia
 
 ## Introduction
 
-Like most compilers, Babel works by doing three passes:
+Like most compilers, Babel works by running three passes:
 1. It starts by generating an abstract representation of the code called an Abstract Syntax Tree;
 2. It optimizes this representation, effectively simplifying and removing unused elements;
 3. It rewrites the remainder in a preset JavaScript format, understandable to the targeted browsers.
 
-Babel is present at all the decision steps of the Technical Committee 39 or [TC39](https://www.ecma-international.org/memento/tc39-rf-tg.htm) for short.
-This committee decides of the state of the JavaScript standards and features.
+Babel is present at each of the decision steps of the Technical Committee 39 or [TC39](https://www.ecma-international.org/memento/tc39-rf-tg.htm) for short.
+This committee decides the state of the JavaScript standards and features.
 The [babel/proposals](https://github.com/babel/proposals) GitHub repository contains a Babel implementation of some of these proposals.
 These proposals can be enabled with the right packages and options or can be tried out directly in the [Babel REPL](https://babeljs.io/repl)!
 
@@ -20,11 +20,11 @@ Babel 7 comes with massive changes, including, for the most important ones:
 - End of the support for Node versions before 6.0;
 - End of the presets: now, you can have [one preset package](https://babeljs.io/docs/en/v7-migration#yearly-preset-deprecations-blog-2017-12-27-nearing-the-70-releasehtml-deprecated-yearly-presets-eg-babel-preset-es20xx) to rule them all!
 - Scoped packages: Babel packages are now scoped under @babel [[Example](https://www.npmjs.com/package/@babel/types)];
-- Babel-Upgrade: to reduce the amout of breakage due to the the upgrade, this [new tool](https://github.com/babel/babel-upgrade) will ease your work;
+- Babel-Upgrade: to reduce the amount of breakage due to the upgrade, this [new tool](https://github.com/babel/babel-upgrade) will ease your work;
 - Support for TypeScript and React Fragments!
 - Pure annotations: a hint for the uglifiers that help them with dead code elimination
 
-As for some of the newest proposals:
+As for some of the most recent proposals:
 - Optional chaining: a very cool feature that will allow you to forget checking every nested property before moving on to its children [[Proposal](https://babeljs.io/docs/en/babel-plugin-proposal-optional-chaining)];
 - Object rest spread: a way to do clean Object destructuring [[Proposal](https://babeljs.io/docs/en/babel-plugin-proposal-object-rest-spread)]
 
