Spelling mistakes pass

--- a/meetups/best-bdx/2018-10-16_best5.md
+++ b/meetups/best-bdx/2018-10-16_best5.md
@@ -65,7 +65,7 @@ This exercise will simplify the process of decision making by distributing the t
 
 1. Tell: I will tell them = I will do it
 2. Sell: I will try and sell it to them = I will teach you
-3. Consult: I will consult and then decide = I will listen your input and decide
+3. Consult: I will consult and then decide = I will hear your input and decide
 4. Agree: We will agree together = Let's decide together!
 5. Advise: I will advise but they decide = I will help you in your decision
 6. Inquire: I will inquire after they decide = I will ask questions after your decision
@@ -74,7 +74,7 @@ This exercise will simplify the process of decision making by distributing the t
 ### The Lean coffee
 
 [The Lean coffee](http://agilecoffee.com/leancoffee/)
-The Lean coffee is an exercice meant to speed up meetings, make them more productive and allow everyone to contribute. Like most meetings, a Lean coffee will start with a meeting objectives and key points review. After this, meeting attendants will vote for the points that matter the most. The most important topics are then tackled one by one with a thumbs up / thumbs down vote after the end of each five-minute session to decide if the topic is worth discussing further.
+The Lean coffee is an exercise meant to speed up meetings, make them more productive and allow everyone to contribute. Like most meetings, a Lean coffee will start with an objectives and key points review. After this, meeting attendants will vote for the points that matter the most. The most important topics are then tackled one by one with a thumbs up / thumbs down vote after the end of each five-minute session to decide if the topic is worth discussing further.
 
 The advantage of such a solution is to prioritize the sensitive points of the meeting, allow everyone to have a voice and allow for post-meeting discussions with the people who wanted to prolong the discussions to understand why they wanted more time.
 
@@ -165,10 +165,10 @@ To achieve this, some ground rules were laid: the application was to be stateles
 The process is iterative and must be run every time a bottleneck is removed, until the objectives are reached.
 
 1. Log analysis: Look at autoscaling, memory, CPU logs and exit codes.
-2. Reproduction: using equivalent tools, test your application and try to reproduct your issue. For load testing, JMeter is the standard, otherwise system analysis and tracing will do.
+2. Reproduction: using equivalent tools, test your application and try to reproduce your issue. For load testing, JMeter is the standard, otherwise system analysis and tracing will do.
 3. Fix: Patch the issue. This step might lead you down the rabbit hole, though.
 
-[Pumba](https://github.com/alexei-led/pumba) has been recommended to chaos-test Docker infrastructures. This tools can be used to create artificial delay between multiple containers.
+[Pumba](https://github.com/alexei-led/pumba) has been recommended to chaos-test Docker infrastructures. This tool can be used to simulate latency between multiple containers.
 
 ### Key points
 
