Spelling mistakes pass

--- a/meetups/cncf-bdx/2018-12-11_cncf2.md
+++ b/meetups/cncf-bdx/2018-12-11_cncf2.md
@@ -4,7 +4,7 @@
 
 - gRPC has been marked GA since the 23rd of October 2018. You can read the announcement on their official website [here](https://grpc.io/blog/grpc-web-ga).
 - [Prometheus](https://prometheus.io/) 2.5 has been released with notably the support for OpenMetrics and unit testing for rules.
-- [Ceph](https://ceph.com/) has not its own organization and is not part of the Linux foundation anymore. The Ceph foundation will continue to contribute on object storage more independently.
+- [Ceph](https://ceph.com/) has not its own organization and is not part of the Linux foundation anymore. The Ceph foundation will continue to contribute to object storage more independently.
 - [Envoy](https://www.envoyproxy.io/) has become the third CNCF Graduated project!
 - [Kubernetes](https://kubernetes.io/) 1.13 has been released, with [CoreDNS](https://coredns.io/) as the default DNS server, the Container Storage Interface, a more serious Kubeadm and the StatefulSets.
 
@@ -14,7 +14,7 @@ By Gaëtan Ars, Expert Lead Engineer @ Orange Business Services
 With Kubernetes, resources can be shared across the same namespace and rights management exists at every level. To handle connections, the ingress controller is here for load balancing, SSL edge termination and virtual zones.
 A Kubernetes cluster operator will most likely use Kubeadm to administer their cluster.
 
-What can you do by associating GitLab and Kubernetes?
+What can you achieve by associating GitLab and Kubernetes?
 - Execute runners;
 - Deploy applications;
 - Review applications;
@@ -43,7 +43,7 @@ Having multiple containers in a pod can be considered bad practice unless you ad
     - Adapter: the application is behind an adapter that will normalize its results.
 
 2. Use labels everywhere  
-Not only the interface becomes clearer but you will be able to manage your resources in a simpler way.
+The interface exposes more meaningful information and you will be able to manage your resources in a simpler way.
 
 3. Infrastructure as code leads to versioning!  
 Code gets reviewed on many levels through a CI pipeline, why not configuration? You could version and test your Dockerfiles and Kubernetes resources the same way and apply the changes when ready.
@@ -70,7 +70,7 @@ To avoid losing a pod forever whenever it crashes, you can create a ReplicaSet t
 8. Probes  
 Kubernetes has two sorts of probes for your pods:
     - Liveness: is the pod alive and well? Add a healthcheck endpoint to your application so that Kubernetes can be informed of the state of your application at any time;
-    - Readiness: is the pod ready to receive trafic? Add a ping endpoint to your application so that Kubernetes knows when it can route requests to your new pod.
+    - Readiness: is the pod ready to receive traffic? Add a ping endpoint to your application so that Kubernetes knows when it can route requests to your new pod.
 
 9. Avoid "latest"  
 Depending on your needs, you may want to properly version your application and avoid just publishing on `latest`. A classic way to organize your releases is the promotion system:
@@ -84,7 +84,7 @@ Depending on your needs, you may want to properly version your application and a
 Unless you need your pods to be stateful, think them stateless so that you will face less scaling issues. Being stateful means that the server keeps information about your session. If your service is autoscaled, your users may end up on different servers and be disconnected frequently.
 
 11. Volumes and distributed storage systems  
-Thanks to PersistentVolumeClaims, Kubernetes can reserve volumes on its own by negociating with your Cloud Provider. StatefulSets can be useful whenever each pod needs its own PersistentVolumeClaim.
+Thanks to PersistentVolumeClaims, Kubernetes can reserve volumes on its own by negotiating with your Cloud Provider. StatefulSets can be useful whenever each pod needs its own PersistentVolumeClaim.
 
 12. Be 12-factors compliant  
 Even though this factor looks self-evident, make sure that your code follows the [12 Factors](https://12factor.net/). By respecting these factors, you will make your life as well as the ones who will monitor and maintain your application easier.
